# Game-Memories

./: README.md  capacitor.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
android/: capacitor.settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
src/: app.css  app.html  hooks.server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: interfaces.ts
src/lib/components/: ConfirmToast.svelte  FutureGamesCards.svelte  GameCard.svelte  SideMenu.svelte
src/lib/database/: authStore.ts  cacheService.ts  igdbService.ts  libraryService.ts  networkStores.ts  storageAdapter.ts
src/lib/utils/: platform.ts  url.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(protected)/: +layout.ts
src/routes/(protected)/catalogo/: +page.svelte  +page.ts
src/routes/(protected)/inicio/: +page.svelte  +page.ts
src/routes/(protected)/jogo/: +page.svelte  +page.ts
src/routes/(protected)/perfil/: +page.svelte  +page.ts
src/routes/esqueci-senha/: +page.svelte
src/routes/update-password/: +page.svelte
static/callback/: index.html
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/delete-user/: index.ts
supabase/functions/refresh-game/: index.ts
supabase/functions/search-future-games/: index.ts
supabase/functions/search-game-by-id/: index.ts
supabase/functions/search-games/: index.ts
(+3 files in other folders)
