[package]
name = "GameMemories"
version = "1.0.2"
description = "Catalogue seus jogos"
authors = ["Mateus Ribeiro Neves Martins"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tokio = { version = "1", features = ["time"] }
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-deep-link = "2.0.0-beta"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc"
